# lox-interpreter

./: Cargo.toml  README.md  run_program.sh  test.lox  test2.lox
src/: ast.rs  callable.rs  interpreter.rs  main.rs  parser.rs
src/scanner/: mod.rs
