[package]
name = "lox-interpreter"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
phf = "0.11.3"
phf_macros = "0.11.3"
thiserror = "1.0.38"                             # error handling
